test/fail/generic-var-request.grace
var name := object {}

name<type {}>
